<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MVP</string>
    <string name="logo">Logotipo</string>

    <!-- Home -->
    <string name="home_phrase">Sua loja preferida e os melhores produtos estão aqui.</string>
    <string name="home_play_video_description">Vídeo</string>

    <!-- Login -->
    <string name="login_phrase_phone">Para acessar o app digite o seu</string>
    <string name="login_phone">telefone</string>
    <string name="login_phrase_password">Agora digite a sua</string>
    <string name="password">senha</string>

    <!-- Register -->
    <string name="register_phrase_fullname">Precisamos primeiro do seu</string>
    <string name="fullname">nome completo</string>
    <string name="hello">Olá</string>
    <string name="register_phrase_hello">como você prefere ser chamado(a) ?</string>
    <string name="register_email">E-mail</string>
    <string name="register_phone">Telefone</string>
    <string name="register_phrase_for_contact">para contato</string>
    <string name="register_password_phrase">Quase lá!</string>
    <string name="register_password_create_phrase">crie uma</string>
    <string name="register_password_confirm_phrase">Agora é só</string>
    <string name="confirm">confirmar</string>

    <!-- Terms -->
    <string name="check_privacy">Li e concordo com os Termos de uso e Política de Privacidade</string>
    <string name="error_message">Aceite os Termos de Uso e Política de Privacidade</string>
    <string name="terms">Termos de Uso e Política de Privacidade</string>
    <string name="error_accept">Para avançar, é preciso aceitar os termos</string>

    <string name="name">nome</string>
    <string name="nickname">apelido</string>
    <string name="username">usuário</string>

    <string name="forgot_password">Esqueci a senha &gt;</string>
    <string name="get_in">Entrar</string>
    <string name="sign_up">Cadastre-se, é grátis!</string>
    <string name="for_entrepreneurs">Para empreendedores</string>

    <string name="old_password">Senha antiga</string>
    <string name="new_password">Nova senha</string>

    <string name="empty_name">Informe seu nome completo</string>
    <string name="empty_nickname">Informe seu apelido</string>
    <string name="empty_email">Informe seu e-mail</string>
    <string name="empty_phone">Informe seu telefone</string>
    <string name="empty_email_phone">Informe seu e-mail ou telefone</string>
    <string name="empty_password">Informe a senha</string>
    <string name="empty_password_confirm">Informe a mesma senha criada anteriormente</string>

    <string name="invalid_email">Informe um e-mail válido</string>
    <string name="invalid_phone">O telefone deve conter apenas números</string>
    <string name="invalid_phone_length">Verifique se informou o DDD</string>
    <string name="invalid_password">Sua senha deve possuir no mínimo 8 caracteres</string>
    <string name="invalid_password_confirm">Confirme a senha informada</string>

    <string name="error_register_response">Erro ao se cadastrar, tente novamente mais tarde</string>
    <string name="error_login_response">Erro na conexão, tente novamente</string>
    <string name="error_request">Erro na conexão, tente novamente</string>

    <string name="search_icon_description">Pesquisa</string>
    <string name="search">Loja, Supermercado, etc&#8230;</string>
    <string name="search_item">Nome do produto ou serviço</string>

    <string name="qrcode">QR Code</string>
    <string name="qrcode_description">Esta é uma descrição de teste para o QR Code acima</string>

    <string name="profile">Perfil</string>
    <string name="orders">Meus Pedidos</string>
    <string name="ranking">Os 100+</string>
    <string name="historic">Histórico</string>
    <string name="config">Configurações</string>
    <string name="logout">Sair</string>
    <string name="logout_question">Deseja realmente sair?</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sim</string>

    <string name="new_item">Novo item</string>
    <string name="orders_description">Acompanhe o status de seus pedidos</string>
    <string name="historic_description">Veja os detalhes do seu histórico de compras</string>

    <string name="uuid">UUID</string>
    <string name="test">Teste</string>

    <string name="establishment">Estabelecimentos</string>
    <string name="establishment_description">Cadastre aqui a sua loja, supermercado, bar&#8230;</string>
    <string name="category">Categorias</string>
    <string name="category_description">Brinquedos, Roupas, Eletrônicos, entre outros</string>
    <string name="product_service">Produtos e serviços</string>
    <string name="product_service_description">Anuncie os seus melhores produtos e serviços</string>
    <string name="attendant">Atendentes</string>
    <string name="attendant_description">[Descrição em construção]</string>
    <string name="manager">Gerentes</string>
    <string name="manager_description">Cadastre seu gerente e deixe o trabalho &quot;pesado&quot; para ele</string>
    <string name="report">Relatório</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_qrcode">QRCode</string>
    <string name="button_delete_description">Deletar valor</string>

    <string name="value">R$ 0,00</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
