<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button7"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button8"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintTop_toTopOf="@+id/button_7" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button9"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintTop_toTopOf="@+id/button_8" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button4"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_7"
            app:layout_constraintTop_toBottomOf="@+id/button_7" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button5"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_8"
            app:layout_constraintTop_toTopOf="@+id/button_4" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button6"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_9"
            app:layout_constraintTop_toTopOf="@+id/button_5" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button1"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_4"
            app:layout_constraintTop_toBottomOf="@+id/button_4" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button2"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_5"
            app:layout_constraintTop_toTopOf="@+id/button_1" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button3"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_6"
            app:layout_constraintTop_toTopOf="@+id/button_2" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_keyboard"
            android:padding="10sp"
            android:text="@string/button0"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_2"
            app:layout_constraintEnd_toEndOf="@+id/button_2"
            app:layout_constraintTop_toBottomOf="@+id/button_2" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_keyboard_backspace"
            android:contentDescription="@string/button_delete_description"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/button_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_9"
            app:layout_constraintTop_toTopOf="@+id/button_9"
            app:srcCompat="@drawable/backspace" />

    </android.support.constraint.ConstraintLayout>

</merge>