<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grey"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_establishment"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/darkGrey"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:contentPadding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_establishment"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/test"
                    android:src="@drawable/establishment" />

                <TextView
                    android:id="@+id/orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_establishment"
                    android:text="@string/establishment"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/orders"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_establishment"
                    android:text="@string/establishment_description"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_category"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:contentPadding="4dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_establishment"
            app:layout_constraintStart_toStartOf="@+id/cardView_establishment"
            app:layout_constraintTop_toBottomOf="@+id/cardView_establishment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_category"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/test"
                    android:src="@drawable/category" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_category"
                    android:text="@string/category"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/category"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_category"
                    android:text="@string/category_description"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_product"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/darkGrey"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:contentPadding="4dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_category"
            app:layout_constraintStart_toStartOf="@+id/cardView_category"
            app:layout_constraintTop_toBottomOf="@+id/cardView_category">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_product_service"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/test"
                    android:src="@drawable/product" />

                <TextView
                    android:id="@+id/orders2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_product_service"
                    android:text="@string/product_service"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/orders2"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_product_service"
                    android:text="@string/product_service_description"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_attendant"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/darkGrey"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:contentPadding="4dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_product"
            app:layout_constraintStart_toStartOf="@+id/cardView_product"
            app:layout_constraintTop_toBottomOf="@+id/cardView_product">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_attendant"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/test"
                    android:src="@drawable/attendant" />

                <TextView
                    android:id="@+id/attendant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_attendant"
                    android:text="@string/attendant"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/attendant"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/imageView_attendant"
                    android:text="@string/attendant_description"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>