<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/hello"
        android:textColor="@color/darkGrey"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/name"
        android:textColor="@color/primary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hello"
        app:layout_constraintStart_toEndOf="@+id/tv_hello"
        app:layout_constraintTop_toTopOf="@+id/tv_hello" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/register_phrase_hello"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_hello"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:errorTextAppearance="@style/errorInput">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:digits="@string/filter_nickname_search"
                    android:inputType="textFilter|textNoSuggestions"
                    android:maxLength="15"
                    android:textSize="30sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@color/grey"
                android:contentDescription="@string/test"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/chevron_down" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>