<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout_question"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_cancel"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_logout"
        app:layout_constraintEnd_toStartOf="@+id/textView_logout"
        app:layout_constraintTop_toTopOf="@+id/textView_logout" />

    <TextView
        android:id="@+id/textView_logout"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!--android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_logout"
        app:layout_constraintEnd_toStartOf="@+id/btn_logout"
        app:layout_constraintTop_toTopOf="@+id/btn_logout" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" /-->

</android.support.constraint.ConstraintLayout>